// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popconfirm Popconfirm baseVue demo works fine 1`] = `
<div
  class="popconfirm-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="demo-item"
    >
      <div
        class="t-popup__reference"
        modelvalue="false"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content t-popup__content--arrow t-popconfirm"
            >
              
              <div
                class="t-popconfirm__content"
              >
                <div
                  class="t-popconfirm__body"
                >
                  <svg
                    class="t-icon t-icon-info-circle-filled t-popconfirm__icon--default"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                  <div
                    class="t-popconfirm__inner"
                  >
                    确认删除订单吗
                  </div>
                </div>
                <div
                  class="t-popconfirm__buttons"
                >
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      确定
                    </span>
                  </button>
                </div>
              </div>
              
              <div
                class="t-popup__arrow"
              />
            </div>
          </div>
        </transition-stub>
        
        
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            删除订单
            
          </span>
        </button>
        
        
      </div>
    </div>
    <!-- 受控用法：自由控制浮层显示与否 -->
    <div
      class="demo-item"
    >
      <div
        class="t-popup__reference"
        modelvalue="false"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content t-popup__content--arrow t-popconfirm"
            >
              
              <div
                class="t-popconfirm__content"
              >
                <div
                  class="t-popconfirm__body"
                >
                  <svg
                    class="t-icon t-icon-info-circle-filled t-popconfirm__icon--default"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                  <div
                    class="t-popconfirm__inner"
                  >
                    是否提交审核？（自由控制浮层显示或隐藏）
                  </div>
                </div>
                <div
                  class="t-popconfirm__buttons"
                >
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      确定
                    </span>
                  </button>
                </div>
              </div>
              
              <div
                class="t-popup__arrow"
              />
            </div>
          </div>
        </transition-stub>
        
        
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            提交审核
            
          </span>
        </button>
        
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Popconfirm Popconfirm buttonVue demo works fine 1`] = `
<div
  class="popconfirm-demo"
>
  <!-- 和 Dialog/Drawer 组件的确认/取消 逻辑一样 -->
  <div
    class="tdesign-demo-block"
  >
    <!-- 使用 props 定义按钮内容 -->
    <div
      class="t-popup__reference"
      modelvalue="false"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content t-popup__content--arrow t-popconfirm"
          >
            
            <div
              class="t-popconfirm__content"
            >
              <div
                class="t-popconfirm__body"
              >
                <svg
                  class="t-icon t-icon-info-circle-filled t-popconfirm__icon--default"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                </svg>
                <div
                  class="t-popconfirm__inner"
                >
                  您确定要提交吗
                </div>
              </div>
              <div
                class="t-popconfirm__buttons"
              >
                <button
                  class="t-button t-size-s t-button--variant-base t-button--theme-default"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    我再想想
                  </span>
                </button>
                <button
                  class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    确认提交
                  </span>
                </button>
              </div>
            </div>
            
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          按钮样式（属性-字符串）
          
        </span>
      </button>
      
      
    </div>
    <!-- 通过透传按钮属性自定义按钮，cancelBtn 和 confirmBtn 值为 null 时表示不显示该按钮 -->
    <div
      class="t-popup__reference"
      modelvalue="false"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content t-popup__content--arrow t-popconfirm"
          >
            
            <div
              class="t-popconfirm__content"
            >
              <div
                class="t-popconfirm__body"
              >
                <svg
                  class="t-icon t-icon-info-circle-filled t-popconfirm__icon--default"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                </svg>
                <div
                  class="t-popconfirm__inner"
                >
                  您确定要提交吗
                </div>
              </div>
              <div
                class="t-popconfirm__buttons"
              >
                <button
                  class="t-button t-size-s t-button--variant-outline t-button--theme-default"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    我再想想
                  </span>
                </button>
                <button
                  class="t-button t-size-s t-button--variant-base t-button--theme-warning t-popconfirm__confirm"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    确认提交
                  </span>
                </button>
              </div>
            </div>
            
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          按钮样式（属性-对象）
          
        </span>
      </button>
      
      
    </div>
    <!-- 使用插槽定义按钮内容 -->
    <div
      class="t-popup__reference"
      modelvalue="false"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content t-popup__content--arrow t-popconfirm"
          >
            
            <div
              class="t-popconfirm__content"
            >
              <div
                class="t-popconfirm__body"
              >
                <svg
                  class="t-icon t-icon-info-circle-filled t-popconfirm__icon--default"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                </svg>
                <div
                  class="t-popconfirm__inner"
                >
                  您确定要提交吗
                </div>
              </div>
              <div
                class="t-popconfirm__buttons"
              >
                
                <button
                  class="t-button t-size-s t-button--variant-text t-button--theme-default"
                  style="margin-right: 12px;"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    
                    取消
                    
                  </span>
                </button>
                
                
                <button
                  class="t-button t-size-s t-button--variant-base t-button--theme-primary"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    
                    确定
                    
                  </span>
                </button>
                
              </div>
            </div>
            
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          按钮样式（插槽）
          
        </span>
      </button>
      
      
    </div>
  </div>
</div>
`;

exports[`Popconfirm Popconfirm describeVue demo works fine 1`] = `
<div
  class="popconfirm-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="demo-item"
    >
      <div
        class="t-popup__reference"
        modelvalue="false"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content t-popup__content--arrow t-popconfirm"
            >
              
              <div
                class="t-popconfirm__content"
              >
                <div
                  class="t-popconfirm__body"
                >
                  <svg
                    class="t-icon t-icon-info-circle-filled t-popconfirm__icon--default"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                  <div
                    class="t-popconfirm__inner"
                  >
                    
                    <p
                      class="title"
                    >
                      带描述的气泡确认框文字按钮
                    </p>
                    <p
                      class="describe"
                    >
                      带描述的气泡确认框在主要说明之外增加了操作相关的详细描述
                    </p>
                    
                  </div>
                </div>
                <div
                  class="t-popconfirm__buttons"
                >
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      确定
                    </span>
                  </button>
                </div>
              </div>
              
              <div
                class="t-popup__arrow"
              />
            </div>
          </div>
        </transition-stub>
        
        
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            自定义浮层内容
            
          </span>
        </button>
        
        
      </div>
    </div>
    <div
      class="demo-item"
    >
      <div
        class="t-popup__reference"
        modelvalue="false"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content t-popup__content--arrow t-popconfirm"
            >
              
              <div
                class="t-popconfirm__content"
              >
                <div
                  class="t-popconfirm__body"
                >
                  <svg
                    class="t-icon t-icon-error-circle-filled t-popconfirm__icon--warning"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                  <div
                    class="t-popconfirm__inner"
                  >
                    
                    <p
                      class="title"
                    >
                      带描述的气泡确认框文字按钮
                    </p>
                    <p
                      class="describe"
                    >
                      带描述的气泡确认框在主要说明之外增加了操作相关的详细描述
                    </p>
                    
                  </div>
                </div>
                <div
                  class="t-popconfirm__buttons"
                >
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      确定
                    </span>
                  </button>
                </div>
              </div>
              
              <div
                class="t-popup__arrow"
              />
            </div>
          </div>
        </transition-stub>
        
        
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-warning"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            自定义浮层内容
            
          </span>
        </button>
        
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Popconfirm Popconfirm iconVue demo works fine 1`] = `
<div
  class="popconfirm-demo"
>
  <div
    class="tdesign-demo-block"
  >
    <div
      class="demo-item"
    >
      <div
        class="t-popup__reference"
        modelvalue="false"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content t-popup__content--arrow t-popconfirm"
            >
              
              <div
                class="t-popconfirm__content"
              >
                <div
                  class="t-popconfirm__body"
                >
                  <svg
                    class="t-icon t-icon-info-circle-filled t-popconfirm__icon--default"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                  <div
                    class="t-popconfirm__inner"
                  >
                    普通事件通知类型偏向于确认
                  </div>
                </div>
                <div
                  class="t-popconfirm__buttons"
                >
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      确定
                    </span>
                  </button>
                </div>
              </div>
              
              <div
                class="t-popup__arrow"
              />
            </div>
          </div>
        </transition-stub>
        
        
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-primary"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            默认
            
          </span>
        </button>
        
        
      </div>
    </div>
    <div
      class="demo-item"
    >
      <div
        class="t-popup__reference"
        modelvalue="false"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content t-popup__content--arrow t-popconfirm"
            >
              
              <div
                class="t-popconfirm__content"
              >
                <div
                  class="t-popconfirm__body"
                >
                  <svg
                    class="t-icon t-icon-error-circle-filled t-popconfirm__icon--warning"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                  <div
                    class="t-popconfirm__inner"
                  >
                    事件通知类型偏向于提示
                  </div>
                </div>
                <div
                  class="t-popconfirm__buttons"
                >
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      确定
                    </span>
                  </button>
                </div>
              </div>
              
              <div
                class="t-popup__arrow"
              />
            </div>
          </div>
        </transition-stub>
        
        
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-warning"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            警告
            
          </span>
        </button>
        
        
      </div>
    </div>
    <div
      class="demo-item"
    >
      <div
        class="t-popup__reference"
        modelvalue="false"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content t-popup__content--arrow t-popconfirm"
            >
              
              <div
                class="t-popconfirm__content"
              >
                <div
                  class="t-popconfirm__body"
                >
                  <svg
                    class="t-icon t-icon-error-circle-filled t-popconfirm__icon--danger"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                  <div
                    class="t-popconfirm__inner"
                  >
                    事件通知类型偏向于高危提醒
                  </div>
                </div>
                <div
                  class="t-popconfirm__buttons"
                >
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      确定
                    </span>
                  </button>
                </div>
              </div>
              
              <div
                class="t-popup__arrow"
              />
            </div>
          </div>
        </transition-stub>
        
        
        <button
          class="t-button t-size-m t-button--variant-base t-button--theme-danger"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            危险
            
          </span>
        </button>
        
        
      </div>
    </div>
  </div>
  <br />
  <br />
  <div
    class="tdesign-demo-block"
  >
    <div
      class="demo-item"
    >
      <div
        class="t-popup__reference"
        modelvalue="false"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content t-popup__content--arrow t-popconfirm"
            >
              
              <div
                class="t-popconfirm__content"
              >
                <div
                  class="t-popconfirm__body"
                >
                  
                  <svg
                    class="t-icon t-icon-browse"
                    style="color: rgb(0, 82, 217);"
                  >
                    <use
                      href="#t-icon-browse"
                    />
                  </svg>
                  
                  <div
                    class="t-popconfirm__inner"
                  >
                    基础气泡确认框文案示意文字按钮
                  </div>
                </div>
                <div
                  class="t-popconfirm__buttons"
                >
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      确定
                    </span>
                  </button>
                </div>
              </div>
              
              <div
                class="t-popup__arrow"
              />
            </div>
          </div>
        </transition-stub>
        
        
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            自定义图标（插槽）
            
          </span>
        </button>
        
        
      </div>
    </div>
    <div
      class="demo-item"
    >
      <div
        class="t-popup__reference"
        modelvalue="false"
      >
        <transition-stub>
          <div
            aria-hidden="true"
            class="t-popup"
            role="tooltip"
            style="display: none;"
          >
            <div
              class="t-popup__content t-popup__content--arrow t-popconfirm"
            >
              
              <div
                class="t-popconfirm__content"
              >
                <div
                  class="t-popconfirm__body"
                >
                  <svg
                    class="t-icon t-icon-browse"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M10.88 8a2.88 2.88 0 11-5.76 0 2.88 2.88 0 015.76 0zm-1 0a1.88 1.88 0 10-3.76 0 1.88 1.88 0 003.76 0z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                    <path
                      d="M1.12 8.23A7.72 7.72 0 008 12.5c2.9 0 5.54-1.63 6.88-4.27L15 8l-.12-.23A7.73 7.73 0 008 3.5a7.74 7.74 0 00-6.88 4.27L1 8l.12.23zM8 11.5A6.73 6.73 0 012.11 8 6.73 6.73 0 0113.9 8 6.74 6.74 0 018 11.5z"
                      fill="currentColor"
                      fillOpacity="0.9"
                    />
                  </svg>
                  <div
                    class="t-popconfirm__inner"
                  >
                    基础气泡确认框文案示意文字按钮
                  </div>
                </div>
                <div
                  class="t-popconfirm__buttons"
                >
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      取消
                    </span>
                  </button>
                  <button
                    class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                    type="button"
                  >
                    <span
                      class="t-button__text"
                    >
                      确定
                    </span>
                  </button>
                </div>
              </div>
              
              <div
                class="t-popup__arrow"
              />
            </div>
          </div>
        </transition-stub>
        
        
        <button
          class="t-button t-size-m t-button--variant-outline t-button--theme-default"
          type="button"
        >
          <span
            class="t-button__text"
          >
            
            自定义图标（属性）
            
          </span>
        </button>
        
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Popconfirm Popconfirm inheritVue demo works fine 1`] = `
<div
  class="popconfirm-demo"
>
  <!-- 可以使用 popupProps.placement 控制弹出方向 -->
  <div
    class="tdesign-demo-block"
  >
    <div
      class="t-popup__reference"
      modelvalue="false"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content t-popup__content--arrow t-popconfirm"
          >
            
            <div
              class="t-popconfirm__content"
            >
              <div
                class="t-popconfirm__body"
              >
                <svg
                  class="t-icon t-icon-info-circle-filled t-popconfirm__icon--default"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                </svg>
                <div
                  class="t-popconfirm__inner"
                >
                  直接使用 placement 进行设置
                </div>
              </div>
              <div
                class="t-popconfirm__buttons"
              >
                <button
                  class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    取消
                  </span>
                </button>
                <button
                  class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    确定
                  </span>
                </button>
              </div>
            </div>
            
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          浮层出现在下方
          
        </span>
      </button>
      
      
    </div>
    <div
      class="t-popup__reference"
      modelvalue="false"
    >
      <transition-stub>
        <div
          aria-hidden="true"
          class="t-popup"
          role="tooltip"
          style="display: none;"
        >
          <div
            class="t-popup__content t-popup__content--arrow t-popconfirm"
          >
            
            <div
              class="t-popconfirm__content"
            >
              <div
                class="t-popconfirm__body"
              >
                <svg
                  class="t-icon t-icon-info-circle-filled t-popconfirm__icon--default"
                  fill="none"
                  height="1em"
                  viewBox="0 0 16 16"
                  width="1em"
                >
                  <path
                    d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
                    fill="currentColor"
                    fillOpacity="0.9"
                  />
                </svg>
                <div
                  class="t-popconfirm__inner"
                >
                  透传属性到 Popup 组件进行设置
                </div>
              </div>
              <div
                class="t-popconfirm__buttons"
              >
                <button
                  class="t-button t-size-s t-button--variant-base t-button--theme-default t-popconfirm__cancel"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    取消
                  </span>
                </button>
                <button
                  class="t-button t-size-s t-button--variant-base t-button--theme-primary t-popconfirm__confirm"
                  type="button"
                >
                  <span
                    class="t-button__text"
                  >
                    确定
                  </span>
                </button>
              </div>
            </div>
            
            <div
              class="t-popup__arrow"
            />
          </div>
        </div>
      </transition-stub>
      
      
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          浮层出现在右侧
          
        </span>
      </button>
      
      
    </div>
  </div>
</div>
`;
